# event_detection

./: README.txt
Code/: latlong_converter.py  vis_ellipse_graph_h2.py  yocp.py
Code/Fabio/build-Urbane-Desktop_Qt_5_4_2_GCC_64bit-Debug/: Makefile
Code/Fabio/src/: BaseGui.hpp  CMakeLists.txt  Urbane.pro  Urbane.pro.user.159c443  Urbane.pro.user.5fdc1c3  Urbane.pro.user.bfecf02  main.cpp
Code/Fabio/src/DataLayer/: CMakeLists.txt  DataLayerTest.cpp  DataLayerTest.hpp  DataManager.cpp  DataManager.hpp  DataStore.hpp  DataStoreArena.cpp  DataStoreArena.hpp  FunctionCache.cpp  FunctionCache.hpp  GridIndex.cpp  GridIndex.hpp  IndexStore.cpp  IndexStore.hpp  mmap.cpp  mmap.hpp  storage_test.cpp
Code/Fabio/src/DataLayer/kdindex/: CudaDb.cpp  CudaDb.hpp  CudaDevice.cpp  CudaDevice.hpp  KdBlock.hpp  KdIndex.cpp  KdIndex.hpp  KdQuery.hpp  Neighborhoods.hpp  RequestQueue.hpp  Trip.hpp
Code/Fabio/src/MapView/: Camera.cpp  Camera.hpp
Code/Fabio/src/Pulse/: GenerateScalarFiles.cpp  GenerateScalarFiles.hpp
Code/Fabio/src/Util/: ColorMap.cpp  ColorMap.hpp  ColorMapBlue.cpp  ColorMapBlue.hpp  ColorMapCategorical.cpp  ColorMapCategorical.hpp  ColorMapRed.cpp  ColorMapRed.hpp  OpenGLFuncs.cpp  OpenGLFuncs.hpp  Typefunctions.hpp  UsefulFuncs.cpp  UsefulFuncs.hpp
Code/satscan/: vis_ellipse_graph_h2.py  write_res_ymdh.py
Code/satscan/iterative/: AnalysisHistory.dbf  iterative_SaTScan_d.py  iterative_SaTScan_h_rm.py  vis_iterative.py
Code/telang/: output_processing.py  threshold_telang.py  writecountcoord_telang.py  writecountcoord_telang_remote.py
Data/fabio/10/: taxi2_DAY_1.scalars  taxi2_DAY_10.scalars  taxi2_DAY_11.scalars  taxi2_DAY_12.scalars  taxi2_DAY_13.scalars  taxi2_DAY_14.scalars  taxi2_DAY_15.scalars  taxi2_DAY_16.scalars  taxi2_DAY_17.scalars  taxi2_DAY_18.scalars  taxi2_DAY_19.scalars  taxi2_DAY_2.scalars  taxi2_DAY_20.scalars  taxi2_DAY_21.scalars  taxi2_DAY_22.scalars  taxi2_DAY_23.scalars  taxi2_DAY_24.scalars  taxi2_DAY_25.scalars  taxi2_DAY_26.scalars  taxi2_DAY_27.scalars  taxi2_DAY_28.scalars  taxi2_DAY_29.scalars  taxi2_DAY_3.scalars  taxi2_DAY_30.scalars  taxi2_DAY_31.scalars  taxi2_DAY_4.scalars  taxi2_DAY_5.scalars  taxi2_DAY_6.scalars  taxi2_DAY_7.scalars  taxi2_DAY_8.scalars  taxi2_DAY_9.scalars
Data/fabio/100/: taxi2_DAY_1.scalars  taxi2_DAY_10.scalars  taxi2_DAY_11.scalars  taxi2_DAY_12.scalars  taxi2_DAY_13.scalars  taxi2_DAY_14.scalars  taxi2_DAY_15.scalars  taxi2_DAY_16.scalars  taxi2_DAY_17.scalars  taxi2_DAY_18.scalars  taxi2_DAY_19.scalars  taxi2_DAY_2.scalars  taxi2_DAY_20.scalars  taxi2_DAY_21.scalars  taxi2_DAY_22.scalars  taxi2_DAY_23.scalars  taxi2_DAY_24.scalars  taxi2_DAY_25.scalars  taxi2_DAY_26.scalars  taxi2_DAY_27.scalars  taxi2_DAY_28.scalars  taxi2_DAY_29.scalars  taxi2_DAY_3.scalars  taxi2_DAY_30.scalars  taxi2_DAY_31.scalars  taxi2_DAY_4.scalars  taxi2_DAY_5.scalars  taxi2_DAY_6.scalars  taxi2_DAY_7.scalars  taxi2_DAY_8.scalars  taxi2_DAY_9.scalars
Data/fabio/1000/: taxi2_DAY_1.scalars  taxi2_DAY_10.scalars  taxi2_DAY_11.scalars  taxi2_DAY_12.scalars  taxi2_DAY_13.scalars  taxi2_DAY_14.scalars  taxi2_DAY_15.scalars  taxi2_DAY_16.scalars  taxi2_DAY_17.scalars  taxi2_DAY_18.scalars  taxi2_DAY_19.scalars  taxi2_DAY_2.scalars  taxi2_DAY_20.scalars  taxi2_DAY_21.scalars  taxi2_DAY_22.scalars  taxi2_DAY_23.scalars  taxi2_DAY_24.scalars  (+14 more)
Data/harish/: coord_graph.txt
Notes/: Grid_Res.ods  Lat_Long_bounds_Grid.ods  Niell_meeting.odt  TaxiVis.odt
Notes/Meetings/: 0504_Freire.doc  ED_Meetings.doc
Notes/Method/: .~lock.20160615_SaTScan_Analysis.pptx#  Dataset processing.docx  Experiment_Design.doc  Global_Comparisons.doc
Notes/Other/: Event_Detection_Networking.doc  General_Remarks.docx  NYU Resources.docx
Notes/Theory/: 20160419_EPD_State_Art.doc  ED_State_Art.ods  Event_pattern_detection.doc  Neill_Wong_Tutorial on event detection_2009.docx  Statistical_Learning_Notes.doc
Presentations/: 20160616_Niell_Techniques_Selection.ppt  20160620_ED_state_art.pptx  20160629_ED_state_art.pptx  20160712_ED_state_art.pptx  20160718_ED_state_art.pptx
Software/CrimeStat/: Mode Split Impedance Defaults.xls
ggearth/: raw_bounds.kmz
satscan/xp_roads/: Coordgraph.geo  coord_graph.csv  ctgraph1110_d.csv  paramg1110_d.prm  paramg1110_d_03_w1-3d_9r.prm  paramg1110_d_03_w1d_9r.prm  paramg1110_d_05.prm  paramg1110_d_1.prm  paramg1110_d_w1d.prm  paramg1110_h.prm  paramg1110_h_01.prm  paramg1110_h_01_b.prm  paramg1110_h_03.prm  paramg1110_h_03_w5h_9r.prm  resg1110_d  resg1110_d.col.txt  resg1110_d.gis.txt  resg1110_d.kml  resg1110_d.sci.txt  resg1110_d_03_w1d_9999r  resg1110_d_03_w1d_9999r.kml  resg1110_d_03_w1d_9r  resg1110_d_05  resg1110_d_05.kml  resg1110_d_05_high  resg1110_d_05_high.kml  resg1110_d_05_highlow  resg1110_d_05_highlow.kml  resg1110_d_1  resg1110_d_1.kml  resg1110_d_r9  resg1110_d_r9.gis.txt  resg1110_d_r9.kml  resg1110_d_r9.llr.txt  resg1110_d_w1-3d_9r  resg1110_d_w1-3d_9r.col.txt  resg1110_d_w1-3d_9r.gis.txt  resg1110_d_w1-3d_9r.kml  resg1110_d_w1-3d_9r.llr.txt  resg1110_d_w1-3d_9r.sci.txt  (+17 more)
satscan/xp_roads_elp/: resg1110_d_elp_2k_none_4d_1c
(+2331 files in other folders)
